Fix some issues on small screen

--- a/src/Templates/TodoTemplate/Bit.TodoTemplate/src/Client/Core/Pages/EditProfilePage.razor.scss
+++ b/src/Templates/TodoTemplate/Bit.TodoTemplate/src/Client/Core/Pages/EditProfilePage.razor.scss
@@ -12,8 +12,8 @@
     flex-flow: column nowrap;
     padding: rem(48px) rem(16px);
 
-    @include sm {
-        padding: rem(16px);
+    @include md {
+        padding: rem(24px) rem(16px);
     }
 }
 
