--- a/src/Templates/TodoTemplate/Bit.TodoTemplate/src/Client/Core/Pages/TodoPage.razor.scss
+++ b/src/Templates/TodoTemplate/Bit.TodoTemplate/src/Client/Core/Pages/TodoPage.razor.scss
@@ -13,7 +13,7 @@
     padding: rem(48px) rem(16px);
 
     @include md {
-        padding: rem(16px);
+        padding: rem(24px) rem(16px);
     }
 }
 
